# rainforest

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  redis.conf  requirements.txt  schema.yaml
api/v1/: exceptions.py  pagination.py  urls.py
api/v1/serializers/: order_serializers.py  product_serializers.py  report_serializers.py
api/v1/views/: report_views.py
api/v1/viewsets/: order_viewsets.py  product_viewsets.py
base/: models.py
cache/: base.py  product_cache.py
celery_app/: __init__.py
celery_app/tasks/: report_tasks.py
orders/: apps.py  dto.py  enums.py  models.py
orders/migrations/: 0001_initial.py
orders/services/: order.py  order_item.py
orders/tests/test_unit/: test_order_service.py
products/: models.py
products/migrations/: 0001_initial.py
rainforest_ecom/: asgi.py  settings.py  wsgi.py
reports/: services.py
